--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,10 +83,11 @@ p {
 
 a {
   color: var(---heading-color);
+  text-decoration: none;
 }
 
 a:hover {
-  transform: scale(1.05);
+  text-decoration: underline;
   display: inline-block;
 }
 
